--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   },
   "dependencies": {
     "express": "^4.10.1",
-    "q": "^1.0.1",
-    "request": "^2.47.0"
+    "async": "~0.9.0",
+    "request": "^2.47.0",
+    "underscore": "~1.7.0"
   },
   "engines": {
     "node": "0.10.x"
