--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "dependencies": {
     "express": "^4.10.1",
     "async": "~0.9.0",
-    "request": "^2.47.0",
-    "underscore": "~1.7.0"
+    "request": "^2.47.0"
   },
   "engines": {
     "node": "0.10.x"
